--- a/memotestTFI/package.json
+++ b/memotestTFI/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
